fix: items not visible on left pane

--- a/documentation/docs-css/extra--large-media-query.css
+++ b/documentation/docs-css/extra--large-media-query.css
@@ -139,8 +139,8 @@ a:active {
 #side-container li {
   list-style: none;
   text-align: start;
-  padding: 0.7rem 1rem;
-  font-size: 1.2rem;
+  padding: 0.6rem 0.7rem;
+  font-size: 1.1rem;
   padding-left: 2rem;
   cursor: pointer;
 }
@@ -148,7 +148,7 @@ a:active {
 #side-container h2 {
   padding: 0.8rem 2rem;
   cursor: default;
-  font-size: 1.3rem;
+  font-size: 1.2rem;
   color: var(--primary-font-dark-color);
   font-weight: 500;
 }
